force-app/main/default/objects/Risk_Mitigation__c/Risk_Mitigation__c.object-meta.xml
<CustomObject>
    <label>Risk / Mitigation</label>
    <nameField>
        <displayFormat>RM-{0000}</displayFormat>
        <label>RM No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk / Mitigations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>