force-app/main/default/objects/Risk_Mitigation__c/fields/Mitigation__c.field-meta.xml
<CustomField>
    <fullName>Mitigation__c</fullName>
    <label>Mitigation</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>