force-app/main/default/objects/Risk_Mitigation__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <referenceTo>Projects__c</referenceTo>
    <relationshipLabel>Risk / Mitigations</relationshipLabel>
    <relationshipName>Risk_Mitigations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>