force-app/main/default/objects/Risk_Mitigation__c/fields/Risk__c.field-meta.xml
<CustomField>
    <fullName>Risk__c</fullName>
    <label>Risk</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>